--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: serif, arial, helvetica, sans-serif;
     font-size: 16px;
     color: black;
@@ -18,4 +18,4 @@ h1 {
 }
 p {
 	color: white;
-}
+} */
